feature: 알림 목록 조회후, 조회된 알림들을 읽음 처리로 변경